--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
         font-size: clamp(0.9rem, 2.5vw, 1rem);
       }
       header .logo-text {
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
-        text-align: center;
+        flex-wrap: wrap;
+        justify-content: center;
       }
       header nav {
         display: none;
@@ -462,7 +463,7 @@
     }
     .videos-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: 1fr; /* Single column for one video */
       gap: 1.5rem;
     }
     .video-card {
@@ -485,6 +486,47 @@
       font-size: clamp(1.1rem, 3vw, 1.2rem);
       font-weight: 600;
       margin: 0.75rem;
+      color: #007bff;
+    }
+
+    /* Images Section */
+    #images {
+      padding: clamp(2rem, 6vw, 3rem) 0;
+      background-color: #ffffff;
+      text-align: center;
+    }
+    #images h2 {
+      font-size: clamp(1.5rem, 4vw, 2rem);
+      font-weight: 700;
+      margin-bottom: 2rem;
+      color: #0a1a2f;
+    }
+    .images-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+    }
+    .image-card {
+      background-color: #f8f9fa;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      text-align: center;
+    }
+    .image-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+    .image-card img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 6px;
+    }
+    .image-card h3 {
+      font-size: clamp(1.1rem, 3vw, 1.2rem);
+      font-weight: 600;
+      margin: 0.75rem 0;
       color: #007bff;
     }
 
@@ -674,13 +716,13 @@
       #home p {
         font-size: clamp(0.9rem, 2.5vw, 1rem);
       }
-      #services h2, #industries h2, #process h2, #testimonials h2, #gallery h2, #blog h2, #materials h2, #videos h2, #upload h2, #about h2, #contact h2 {
+      #services h2, #industries h2, #process h2, #testimonials h2, #gallery h2, #blog h2, #materials h2, #videos h2, #images h2, #upload h2, #about h2, #contact h2 {
         font-size: clamp(1.25rem, 3.5vw, 1.75rem);
       }
-      .services-grid, .industries-grid, .process-grid, .testimonials-grid, .gallery-grid, .blog-grid, .materials-grid, .videos-grid {
+      .services-grid, .industries-grid, .process-grid, .testimonials-grid, .gallery-grid, .blog-grid, .materials-grid, .videos-grid, .images-grid {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       }
-      .video-card video {
+      .video-card video, .image-card img {
         max-width: 100%;
       }
     }
@@ -709,28 +751,25 @@
         padding: clamp(0.4rem, 1.5vw, 0.5rem) clamp(1rem, 3vw, 1.5rem);
         font-size: clamp(0.8rem, 2vw, 0.9rem);
       }
-      #services, #industries, #process, #testimonials, #gallery, #blog, #materials, #videos, #upload, #about, #contact {
+      #services, #industries, #process, #testimonials, #gallery, #blog, #materials, #videos, #images, #upload, #about, #contact {
         padding: clamp(1.5rem, 5vw, 2rem) 0;
       }
-      #services h2, #industries h2, #process h2, #testimonials h2, #gallery h2, #blog h2, #materials h2, #videos h2, #upload h2, #about h2, #contact h2 {
-        font-size: clamp(1.25rem, 3.5vw, 1.5rem);
-      }
-      .services-grid, .industries-grid, .process-grid, .testimonials-grid, .gallery-grid, .blog-grid, .materials-grid, .videos-grid {
+      .services-grid, .industries-grid, .process-grid, .testimonials-grid, .gallery-grid, .blog-grid, .materials-grid, .videos-grid, .images-grid {
         grid-template-columns: 1fr;
       }
       .upload-box, .contact-form {
         max-width: 90%;
       }
-      .service-card, .industry-card, .process-card, .testimonial-card, .gallery-card, .blog-card, .material-card, .video-card {
+      .service-card, .industry-card, .process-card, .testimonial-card, .gallery-card, .blog-card, .material-card, .video-card, .image-card {
         padding: 1rem;
       }
-      .service-card h3, .industry-card h3, .process-card h3, .testimonial-card h4, .gallery-card h3, .blog-card h3, .material-card h3, .video-card h3 {
+      .service-card h3, .industry-card h3, .process-card h3, .testimonial-card h4, .gallery-card h3, .blog-card h3, .material-card h3, .video-card h3, .image-card h3 {
         font-size: clamp(1rem, 2.5vw, 1.1rem);
       }
       .service-card p, .industry-card p, .process-card p, .testimonial-card p, .gallery-card p, .blog-card p, .material-card p {
         font-size: clamp(0.8rem, 2vw, 0.9rem);
       }
-      .video-card video {
+      .video-card video, .image-card img {
         max-width: 100%;
         height: auto;
       }
@@ -799,6 +838,7 @@
         <a href="#blog">Blog</a>
         <a href="#materials">Materials</a>
         <a href="#videos">Videos</a>
+        <a href="#images">Images</a>
         <a href="#upload">Upload Design</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
@@ -986,19 +1026,26 @@
           </video>
           <h3>3D Printing Process</h3>
         </div>
-        <div class="video-card">
-          <video controls aria-label="Video of automotive prototyping">
-            <source src="https://www.sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-          <h3>Automotive Prototyping</h3>
+      </div>
+    </div>
+  </section>
+
+  <!-- Images Section -->
+  <section id="images">
+    <div class="container">
+      <h2>Our Image Gallery</h2>
+      <div class="images-grid">
+        <div class="image-card">
+          <img src="https://via.placeholder.com/300x200" alt="Automotive Prototype Image" aria-label="Automotive Prototype Image">
+          <h3>Automotive Prototype</h3>
         </div>
-        <div class="video-card">
-          <video controls aria-label="Video of jewelry design">
-            <source src="https://www.sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-          <h3>Jewelry Design Process</h3>
+        <div class="image-card">
+          <img src="https://via.placeholder.com/300x200" alt="Medical Model Image" aria-label="Medical Model Image">
+          <h3>Medical Model</h3>
+        </div>
+        <div class="image-card">
+          <img src="https://via.placeholder.com/300x200" alt="Jewelry Design Image" aria-label="Jewelry Design Image">
+          <h3>Jewelry Design</h3>
         </div>
       </div>
     </div>
@@ -1051,6 +1098,7 @@
         <a href="#blog">Blog</a>
         <a href="#materials">Materials</a>
         <a href="#videos">Videos</a>
+        <a href="#images">Images</a>
         <a href="#upload">Upload Design</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
