--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
   height: 100%;
   object-fit: cover;
   z-index: -1;
+  filter: brightness(0.5) blur(2.5px); /* Adjust these values */
 }
 
 .home-content {
